--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "chart.js": "^2.5.0",
     "onsenui": "^2.9.2",
     "react": "^15.5.3",
-    "react-chartjs-2": "^2.7.0",
     "react-dom": "^15.5.3",
     "react-onsenui": "^1.10.0",
     "react-scripts": "1.1.1"
@@ -18,6 +17,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "ajv": "^6.0.0"
+    "ajv": "^6.0.0",
+    "react-chartjs-2": "^2.7.0"
   }
 }
