--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "chart.js": "^2.5.0",
+    "moment": "^2.21.0",
     "onsenui": "^2.9.2",
     "react": "^15.5.3",
     "react-chartjs-2": "^2.7.0",
